# atx

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  _barra_text.txt  barra_extract.txt  prompt.txt  vcpkg.json
atx-core/: CMakeLists.txt  README.md
atx-core/bench/: CMakeLists.txt  bench_main.cpp  column_bench.cpp  disruptor_bench.cpp  mpmc_queue_bench.cpp  ring_buffer_bench.cpp  rolling_bench.cpp  simd_bench.cpp  spsc_queue_bench.cpp
atx-core/examples/: CMakeLists.txt  databento_aapl.cpp  databento_cost.cpp  databento_opra_xom.cpp  databento_xom_bbo.cpp
atx-core/plans/: 2026-06-06-databento-loader.md  2026-06-06-databento-phase2-design.md  2026-06-06-databento-phase2-plan.md  databento-loader-design.md
atx-core/src/: core.cpp  datetime.cpp  decimal.cpp  symbol.cpp
atx-core/src/db/: sqlite.cpp
atx-core/src/io/: parquet.cpp  parquet_writer.cpp  zip_reader.cpp
atx-core/tests/: CMakeLists.txt  algo_test.cpp  aligned_test.cpp  arena_test.cpp  bit_test.cpp  column_test.cpp  core_test.cpp  cross_section_test.cpp  databento_test.cpp  datetime_test.cpp  db_sqlite_test.cpp  dbn_fixture.hpp  dbn_test.cpp  decimal_test.cpp  decompose_test.cpp  disruptor_test.cpp  domain_test.cpp  error_test.cpp  fixed_vector_test.cpp  frame_test.cpp  hash_map_test.cpp  hash_test.cpp  hierarchical_test.cpp  intrusive_list_test.cpp  linalg_test.cpp  log_test.cpp  math_test.cpp  mpmc_queue_test.cpp  object_pool_test.cpp  online_stats_test.cpp  parquet_test.cpp  parquet_writer_test.cpp  pca_test.cpp  platform_test.cpp  quantile_test.cpp  random_test.cpp  regression_test.cpp  ring_buffer_test.cpp  rmt_clean_test.cpp  rolling_test.cpp  (+12 more)
atx-engine/: CMakeLists.txt  pch.hpp
atx-engine/bench/: .clang-tidy  CMakeLists.txt  alpha_batch_bench.cpp  alpha_streams_bench.cpp  alpha_widened_bench.cpp  backtest_loop_bench.cpp  bench_main.cpp  book_bench.cpp  cost_bench.cpp  data_ingest_bench.cpp  event_bus_bench.cpp  execution_sim_bench.cpp  executor_bench.cpp  factory_bench.cpp  learn_bench.cpp  meta_book_bench.cpp  multi_horizon_bench.cpp  nn_alpha_bench.cpp  optimizer_scale_bench.cpp  orats_history_bench.cpp  panel_read_bench.cpp  parallel_bench.cpp  phase4_bench.cpp  research_bench.cpp  risk_covariance_bench.cpp  robust_search_bench.cpp
atx-engine/docs/: README.md
atx-engine/plans/: ROADMAP.md  forward-plan-2026-06-16.md  sprint-11-progress.md
atx-engine/plans/docs/: module.md  sprint.md  (+1 more)
atx-engine/research/: alpha-expression-dsl-deep-dive.md  automate-conditioning-discovery-sprint-plan.md  backtest-loop-execution-sim-deep-dive.md  clustering-module-sprint-plan.md  covariance-matrix-construction-massive-universe-deep-dive.md  finding-alphas-book-deep-dive.md  plot_equity_curve.py  renaissance-technologies-systems-deep-dive.md  renaissance-worldquant-deep-dive.md  single-alpha-capacity-findings.md  unsupervised-stock-clustering-deep-dive.md  worldquant-systems-deep-dive.md
atx-engine/reviews/: atx-engine-code-review-2026-06-14.md
atx-engine/src/: engine.cpp
atx-engine/tests/: CMakeLists.txt  alpha_batch_test.cpp  alpha_bindings_test.cpp  alpha_bytecode_test.cpp  alpha_conformance_test.cpp  alpha_cs_gapfill_test.cpp  alpha_cs_residualize_test.cpp  alpha_cs_test.cpp  alpha_dag_test.cpp  alpha_datafields_test.cpp  alpha_immediates_test.cpp  alpha_kalman_ref_test.cpp  alpha_lexer_test.cpp  alpha_member_test.cpp  alpha_multi_segment_panel_test.cpp  alpha_multioutput_test.cpp  alpha_op_swap_stress_test.cpp  alpha_ops_brain_test.cpp  alpha_oracle_test.cpp  alpha_ou_rolling_test.cpp  alpha_panel_test.cpp  alpha_parser_test.cpp  alpha_proof_test.cpp  alpha_recurrence_test.cpp  alpha_registry_test.cpp  alpha_slotpool_test.cpp  alpha_state_ops_test.cpp  alpha_statespace_e2e_test.cpp  alpha_streams_test.cpp  alpha_trade_when_test.cpp  alpha_ts_brain_test.cpp  alpha_ts_ops_test.cpp  alpha_ts_test.cpp  alpha_typecheck_test.cpp  alpha_unparse_test.cpp  alpha_vm_test.cpp  alpha_widened_conformance_test.cpp  backtest_integration_test.cpp  backtest_loop_test.cpp  book_allocation_test.cpp  (+149 more)
atx-impl/: CMakeLists.txt
atx-impl/research/: 2026-06-22-pipeline-degenerate-alpha-failure-analysis.md
atx-impl/src/: artifacts.cpp  artifacts.hpp  book_shape.hpp  config.cpp  config.hpp  diag_risk.hpp  dispatch.cpp  dispatch.hpp  main.cpp  research_sim.hpp  sector_groups.hpp  serialize_genome.cpp  serialize_genome.hpp  serialize_panel.cpp  serialize_panel.hpp  stage_combine.cpp  stage_discover.cpp  stage_discover_detail.hpp  stage_load.cpp  stage_optimize.cpp  stage_panel.cpp  stage_regime.cpp  stage_report.cpp  stage_run.cpp  stage_sweep.cpp  stages.hpp  store_progress_sink.cpp  store_progress_sink.hpp
atx-impl/tests/: CMakeLists.txt  alpha101_orats_test.cpp  alpha101_riskmodel.hpp  alpha101_riskmodel_test.cpp  alpha101_support.hpp  augment_test.cpp  book_shape_test.cpp  cli_smoke_test.cpp  combine_test.cpp  cost_bps_test.cpp  discover_test.cpp  e2e_pipeline_test.cpp  load_test.cpp  optimize_test.cpp  orats_fixture.hpp  panel_test.cpp  report_capacity_test.cpp  report_participation_test.cpp  sector_groups_test.cpp  sign_deploy_test.cpp  single_alpha_capacity_test.cpp  store_discover_test.cpp  sweep_test.cpp  typed_fields_test.cpp
atx-tsdb/: CMakeLists.txt
atx-tsdb/src/: builder.cpp  load_parquet.cpp  mapping.cpp  segment_reader.cpp  version.cpp
atx-tsdb/tests/: CMakeLists.txt  builder_test.cpp  checksum_test.cpp  load_parquet_test.cpp  mapping_test.cpp  scaffold_test.cpp  segment_reader_test.cpp  segment_test.cpp
atx-tsdb/tools/: CMakeLists.txt  load_main.cpp  stat_main.cpp
python/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
python/scripts/: build_us_split_adjustments.py  derive_liquid_universe.py  extract_databento_equs_ohlcv_1d.py
python/tests/: _helpers.py  test_alpha_dsl.py  test_alpha_facade.py  test_alpha_strategy.py  test_backtest_core.py  test_backtest_determinism.py  test_backtest_facade.py  test_config.py  test_decimal.py  test_eval.py  test_fund.py  test_learn.py  test_mining.py  test_risk.py  test_smoke.py  test_symbol.py
(+669 files in other folders)
